MMFMWK-7954 waylandsink: implement alpha blending for surface
1. implement alpha blending procotol
2. don't set area_surface to opaque
3. reset alpha when exit

upstream status: imx specific

--- a/gst-libs/gst/wayland/meson.build
+++ b/gst-libs/gst/wayland/meson.build
@@ -41,6 +41,7 @@ if use_wayland
     ['fullscreen-shell', 'unstable', 'v1', ],
     ['xdg-shell', 'stable', ],
     ['single-pixel-buffer', 'staging', 'v1' ],
+    ['alpha-compositing', 'unstable', 'v1', ],
   ]
   protocols_files = []
 
