MMFMWK-7954 waylandsink: apply surface buffer scale for 850D
get real display solution using wl_output interface. Compare it
with desktop size to decide which scale to use. defaultly, make
scale = 1 for compitable purpose.

upstream status: imx specific

--- a/gst-libs/gst/wayland/meson.build
+++ b/gst-libs/gst/wayland/meson.build
@@ -17,6 +17,7 @@ if use_wayland
       'gstwlvideobufferpool.c',
       'gstwlvideoformat.c',
       'gstwlwindow.c',
+      'gstwlutils.c',
   ])
 
   wl_headers = files([
@@ -29,6 +30,7 @@ if use_wayland
       'gstwlvideobufferpool.h',
       'gstwlvideoformat.h',
       'gstwlwindow.h',
+      'gstwlutils.h',
       'wayland.h',
       'wayland-prelude.h',
   ])
