MMFMWK-8468 waylandsink: implement wayland linux-explicit-synchronization protocol
add implementation of linux-explicit-synchronization protocol in waylandsink

upstream status: pending
https://gitlab.freedesktop.org/gstreamer/gst-plugins-bad/merge_requests/440

(cherry picked from commit f8489b517e57cd85a7546b596bda784f6da183a7)
This commit also includes commit 7a6909acc8634cddd2dee78ddfe38befec1f1e37
MMFMWK-9268 wlbuffer: destroy buffer_release object if needed

--- a/gst-libs/gst/wayland/meson.build
+++ b/gst-libs/gst/wayland/meson.build
@@ -45,6 +45,7 @@ if use_wayland
     ['single-pixel-buffer', 'staging', 'v1' ],
     ['alpha-compositing', 'unstable', 'v1', ],
     ['hdr10-metadata', 'unstable', 'v1', ],
+    ['linux-explicit-synchronization', 'unstable', 'v1'],
   ]
   protocols_files = []
 
