--- a/meson_options.txt
+++ b/meson_options.txt
@@ -206,6 +206,7 @@ option('magicleap', type : 'feature', value : 'auto', description : 'Magic Leap 
 option('v4l2codecs', type : 'feature', value : 'auto', description : 'Video4Linux Stateless CODECs support')
 option('uvcgadget', type : 'feature', value : 'auto', description : 'uvc video gadget plugin')
 option('isac', type : 'feature', value : 'auto', description : 'iSAC plugin')
+option('tinycompress', type : 'feature', value : 'auto', description : 'tinycompresssink based on libtinycompress API')
 
 # AJA plugin options
 option('aja-sdk-dir', type : 'string', value : '',
