onnx: Only read labels file one and use GIO
Part-of: <https://gitlab.freedesktop.org/gstreamer/gstreamer/-/merge_requests/6001>

--- a/ext/onnx/meson.build
+++ b/ext/onnx/meson.build
@@ -25,7 +25,7 @@ if onnxrt_dep.found()
     link_args : noseh_link_args,
     include_directories : [configinc, libsinc, cuda_stubinc],
     dependencies : [gstbase_dep, gstvideo_dep, gstanalytics_dep, onnxrt_dep,
-        libm] + extra_deps,
+        libm, gio_dep] + extra_deps,
     install : true,
     install_dir : plugins_install_dir,
   )
