onnx: Port SSD detector to C
Part-of: <https://gitlab.freedesktop.org/gstreamer/gstreamer/-/merge_requests/6001>

--- a/ext/onnx/meson.build
+++ b/ext/onnx/meson.build
@@ -15,8 +15,7 @@ endif
 if onnxrt_dep.found()
     gstonnx = library('gstonnx',
     'gstonnx.c',
-    'decoders/gstobjectdetectorutils.cpp',
-    'decoders/gstssdobjectdetector.cpp',
+    'decoders/gstssdobjectdetector.c',
     'gstonnxinference.cpp',
     'gstonnxclient.cpp',
     'tensor/gsttensormeta.c',
